# DjangoAuthTGBot

./: .gitignore  README.md  manage.py  pyproject.toml
DjangoAuthTGBot/: asgi.py  settings.py  urls.py  wsgi.py
auth_app/: admin.py  models.py  telegram_bot.py  urls.py  views.py
auth_app/management/commands/: runbot.py
auth_app/migrations/: 0001_initial.py
templates/: home.html  login.html  login_with_telegram.html
